--- a/assignment1-movies/Makefile
+++ b/assignment1-movies/Makefile
@@ -1,10 +1,8 @@
 CC = gcc -g --std=gnu99 
 exe_file = movies
 
-$(exe_file): dynarray.o movie.o prog.o main.o
-	$(CC) dynarray.o movie.o prog.o main.o -o $(exe_file)
-dynarray.o: dynarray.c
-	$(CC) -c dynarray.c
+$(exe_file): movie.o prog.o main.o
+	$(CC)  movie.o prog.o main.o -o $(exe_file)
 movie.o: movie.c
 	$(CC) -c movie.c
 prog.o: prog.c
