intial setup for process_movies() done

--- a/assignment2-files-and-directories/Makefile
+++ b/assignment2-files-and-directories/Makefile
@@ -1,8 +1,10 @@
 CC = gcc -g --std=gnu99 
 exe_file = movies_by_year
 
-$(exe_file): prog.o main.o
-	$(CC)  prog.o main.o -o $(exe_file)
+$(exe_file): movie.o prog.o main.o
+	$(CC)  movie.o prog.o main.o -o $(exe_file)
+movie.o: movie.c
+	$(CC) -c movie.c	
 prog.o: prog.c
 	$(CC) -c prog.c	
 main.o: main.c
