added command header and source files

--- a/assignment3-smallsh/Makefile
+++ b/assignment3-smallsh/Makefile
@@ -1,8 +1,10 @@
-CC = gcc -g --std=gnu99
+CC = gcc -g -Wall --std=gnu99
 exe_file = smallsh
 
-$(exe_file): cmd_line.h prog.o main.o
-	$(CC)  cmd_line.c prog.o main.o -o $(exe_file)
+$(exe_file): cmd_line.o command.o prog.o main.o
+	$(CC)  cmd_line.c command.o prog.o main.o -o $(exe_file)
+command.o: command.c
+	$(CC) -c command.c	
 cmd_line.o: cmd_line.c
 	$(CC) -c cmd_line.c	
 prog.o: prog.c
