makes linked list of processes; 0 at begging bug (ignore it)

--- a/assignment3-smallsh/Makefile
+++ b/assignment3-smallsh/Makefile
@@ -1,8 +1,10 @@
 CC = gcc -g -Wall --std=gnu99
 exe_file = smallsh
 
-$(exe_file): cmd_line.o command.o prog.o main.o
-	$(CC)  cmd_line.c command.o prog.o main.o -o $(exe_file)
+$(exe_file): child_proc.o cmd_line.o command.o prog.o main.o
+	$(CC)  child_proc.o cmd_line.c command.o prog.o main.o -o $(exe_file)
+child_proc.o: child_proc.c
+	$(CC) -c child_proc.c	
 command.o: command.c
 	$(CC) -c command.c	
 cmd_line.o: cmd_line.c
